--- a/gazeProReact/src/index.css
+++ b/gazeProReact/src/index.css
@@ -31,8 +31,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  /*place-items: center;*/
+  min-width: 220px;
   min-height: 100vh;
 }
 
